# UCILoader

./: .gitignore  AbstractPipe_8h_source.html  CMakeLists.txt  Config.cmake.in  Doxyfile  EngineConnection_8h_source.html  EngineEvent_8h_source.html  Logger_8h_source.html  Parser_8h_source.html  ProcessWrapper_8h_source.html  README.md  StandardChess_8h_source.html  Standard_Chess.html  UCI_8h_source.html  annotated.html  annotated_dup.js  classStandardChess_1_1FenPos-members.html  classStandardChess_1_1FenPos.html  classStandardChess_1_1FenPos.js  classStandardChess_1_1StandardChessMoveMarschaler-members.html  classStandardChess_1_1StandardChessMoveMarschaler.html  classStandardChess_1_1StandardChessMoveMarschaler.js  classStandardChess_1_1StartPos-members.html  classStandardChess_1_1StartPos.html  classStandardChess_1_1StartPos.js  classUCILoader_1_1AbstractPipeReader-members.html  classUCILoader_1_1AbstractPipeReader.html  classUCILoader_1_1AbstractPipeReader.js  classUCILoader_1_1AbstractPipeWriter-members.html  classUCILoader_1_1AbstractPipeWriter.html  classUCILoader_1_1AbstractPipeWriter.js  classUCILoader_1_1CanNotOpenProcessException-members.html  classUCILoader_1_1CanNotOpenProcessException.html  classUCILoader_1_1CanNotOpenProcessException.js  classUCILoader_1_1ConcreteEvent-members.html  classUCILoader_1_1ConcreteEvent.html  classUCILoader_1_1ConcreteEvent.js  classUCILoader_1_1EngineEvent-members.html  classUCILoader_1_1EngineEvent.html  classUCILoader_1_1EngineEvent.js  (+106 more)
.github/workflows/: cmake-multi-platform.yml  dixygen.yml
Examples/EngineOptionDetector/: CMakeLists.txt  main.cpp
Examples/demo/: CMakeLists.txt  main.cpp
Examples/proxy/: CMakeLists.txt  main.cpp
SystemTests/: BasicLoggingTester.cpp  CMakeLists.txt  EngineConnectionTester.cpp  EngineCrashTester.cpp  EngineEventTester.cpp
UnitTests/: CMakeLists.txt  TestAbstractPipe.cpp  TestEngineConnection.cpp  TestEngineEvent.cpp  TestUCIInfo.cpp  TestUCIParser.cpp  pch.h
include/UCILoader/: AbstractPipe.h  EngineConnection.h  EngineEvent.h  EngineLoader.h  Logger.h  Parser.h  ProcessWrapper.h  StandardChess.h  UCI.h  target.h  target.h.in
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_13.js  all_14.js  all_15.js  all_2.js  all_4.js  all_5.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_12.js  functions_13.js  functions_14.js  functions_15.js  (+25 more)
src/: AbstractPipe.cpp  EngineConnection.cpp  EngineEvent.cpp  Logger.cpp  Parser.cpp  StandardChess.cpp  UCI.cpp  UnixEngineProcess.cpp  UnixProcessWrapper.cpp  WinEngineProcess.cpp  WinProcessWrapper.cpp
